--- a/YellowstonePathology/UI/Test/LynchSyndromeEvaluationResultPage.xaml
+++ b/YellowstonePathology/UI/Test/LynchSyndromeEvaluationResultPage.xaml
@@ -113,20 +113,20 @@
 						<RowDefinition Height="*"></RowDefinition>
 					</Grid.RowDefinitions>
 
-                    <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold">LSE Type:</TextBlock>
+                    <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold">Indication:</TextBlock>
                     <ComboBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=LSETypeCollection}" 
                               SelectedValue="{Binding Path=PanelSetOrder.LynchSyndromeEvaluationType}" SelectionChanged="ComboBoxLSEType_SelectionChanged" />
                     
                     <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold">Ordered On:</TextBlock>
 					<TextBlock Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=OrderedOnDescription}"></TextBlock>
 
-					<TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold">Order Status:</TextBlock>
-					<TextBlock Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=LSEResultStatus.Status}"></TextBlock>
+					<!--<TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold">Order Status:</TextBlock>
+					<TextBlock Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=LSEResultStatus.Status}"></TextBlock>-->
 
 					<TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="3" FontWeight="Bold" Margin="2,5,2,2">Results:</TextBlock>
 
-                    <ListView Name="ListViewResults" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="3" Margin="2,2,2,2" SelectionChanged="ListViewResults_SelectionChanged" ItemsSource="{Binding Path=LSERuleCollection}">
-                        <ListView.ItemContainerStyle>
+                    <ListView Name="ListViewResults" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="3" Margin="2,2,2,2" ItemsSource="{Binding Path=LSERuleCollection}">
+                        <!--<ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
                                 <Style.Triggers>
                                     <MultiDataTrigger>
@@ -137,7 +137,7 @@
                                     </MultiDataTrigger>
                                 </Style.Triggers>
                             </Style>
-                        </ListView.ItemContainerStyle>
+                        </ListView.ItemContainerStyle>-->
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="Indication" Width="90" DisplayMemberBinding="{Binding Path=Indication}" />
@@ -145,9 +145,10 @@
                                 <GridViewColumn Header="MSH2" Width="90" DisplayMemberBinding="{Binding Path=MSH2Result}" />
                                 <GridViewColumn Header="MSH6" Width="90" DisplayMemberBinding="{Binding Path=MSH6Result}" />
                                 <GridViewColumn Header="PMS2" Width="90" DisplayMemberBinding="{Binding Path=PMS2Result}" />
-                                <!--<GridViewColumn Header="Additional Testing" Width="180" DisplayMemberBinding="{Binding Path=AdditionalTesting}" /> -->
                                 <GridViewColumn Header="BRAF" Width="90" DisplayMemberBinding="{Binding Path=BRAFResult}" />
+                                <GridViewColumn Header="BRAF Required" Width="90" DisplayMemberBinding="{Binding Path=BRAFRequired}" />
                                 <GridViewColumn Header="Meth" Width="90" DisplayMemberBinding="{Binding Path=MethResult}" />
+                                <GridViewColumn Header="Meth REquired" Width="90" DisplayMemberBinding="{Binding Path=MethRequired}" />
                             </GridView>
                         </ListView.View>
                     </ListView>
@@ -165,9 +166,6 @@
 							</GridView>
 						</ListView.View>
 					</ListView>
-
-					<TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,5" FontWeight="Bold">BRAF Is Indicated:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="7" Margin="2,2,2,5" IsChecked="{Binding Path=PanelSetOrder.BRAFIsIndicated}"></CheckBox>
 
 					<TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,5" FontWeight="Bold">Interpretation:</TextBlock>
 					<TextBox Grid.Column="1" Grid.Row="8" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True"/>
