--- a/YellowstonePathology/UI/Test/LynchSyndromeEvaluationResultPage.xaml
+++ b/YellowstonePathology/UI/Test/LynchSyndromeEvaluationResultPage.xaml
@@ -167,7 +167,10 @@
 						</ListView.View>
 					</ListView>
 
-					<TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,5" FontWeight="Bold">Interpretation:</TextBlock>
+                    <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,5" FontWeight="Bold">Result:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="7" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.Result}" TextWrapping="Wrap" AcceptsReturn="True"/>
+
+                    <TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,5" FontWeight="Bold">Interpretation:</TextBlock>
 					<TextBox Grid.Column="1" Grid.Row="8" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True"/>
 
 					<TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,5" FontWeight="Bold">Comment:</TextBlock>
