--- a/YellowstonePathology/UI/Billing/BillingPage.xaml
+++ b/YellowstonePathology/UI/Billing/BillingPage.xaml
@@ -193,6 +193,7 @@
                     <ContextMenu>
                         <MenuItem Header="Delete" Click="MenuItemDeletePanelSetOrderCPTCodes_Click"></MenuItem>
                         <MenuItem Header="Update Client Id" Click="MenuItemUpdateClientId_Click"></MenuItem>
+                        <MenuItem Header="Change To 88342" Click="MenuItemChangeTo88342_Click"></MenuItem>
                     </ContextMenu>
                 </ListView.ContextMenu>
                 <ListView.View>                    
