--- a/YellowstonePathology/UI/Test/ALKForNSCLCByFISHResultPage.xaml
+++ b/YellowstonePathology/UI/Test/ALKForNSCLCByFISHResultPage.xaml
@@ -32,8 +32,10 @@
 
             <Grid Grid.Column="0" Margin="10" Width="210">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"></RowDefinition>                    
-					<RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
@@ -45,31 +47,39 @@
                 
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Options</TextBlock>
 
-                <TextBlock Name="TextBlockPreviousResults" Grid.Column="0" Grid.Row="1" Margin="5,3,0,5" FontSize="14">
+                <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">
+                    <Hyperlink Click="HyperLinkCPTCodes_Click">CPT Codes</Hyperlink>
+                </TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">
+                    <Hyperlink Click="HyperLinkProbeComment_Click">Probe Comment</Hyperlink>
+                </TextBlock>
+
+                <TextBlock Name="TextBlockPreviousResults" Grid.Column="0" Grid.Row="3" Margin="5,3,0,5" FontSize="14">
 					<Hyperlink Click="HyperLinkPreviousResults_Click">Previous Results</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0" FontSize="14">
+                <TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0" FontSize="14">
                     <Hyperlink Click="HyperLinkAcceptResults_Click">Accept Results</Hyperlink>
 				</TextBlock>
 
-                <TextBlock Name="TextBlockShowDocument" Grid.Column="0" Grid.Row="3" Margin="5,3,0,0" FontSize="14">                    
+                <TextBlock Name="TextBlockShowDocument" Grid.Column="0" Grid.Row="5" Margin="5,3,0,0" FontSize="14">                    
                     <Hyperlink Click="HyperLinkShowDocument_Click">Show Document</Hyperlink>
 				</TextBlock>
                 
-				<TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,5" FontSize="14">
+				<TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,5" FontSize="14">
 					<Hyperlink Click="HyperLinkFinalizeResults_Click">Finalize</Hyperlink>
 				</TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,0" FontSize="14">                    
+                <TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0" FontSize="14">                    
                     <Hyperlink Click="HyperLinkCancelInsufficient_Click">Cancel (Insufficient)</Hyperlink>
                 </TextBlock>
                 
-                <TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0" FontSize="14">                    
+                <TextBlock Grid.Column="0" Grid.Row="9" Margin="5,3,0,0" FontSize="14">                    
                     <Hyperlink Click="HyperLinkUnacceptResults_Click">Unaccept Results</Hyperlink>
 				</TextBlock>
 
-                <TextBlock Name="TextBlockUnfinalResults" Grid.Column="0" Grid.Row="8" Margin="5,3,0,0" FontSize="14">                    
+                <TextBlock Name="TextBlockUnfinalResults" Grid.Column="0" Grid.Row="10" Margin="5,3,0,0" FontSize="14">                    
                     <Hyperlink Click="HyperLinkUnfinalResults_Click">Unfinalize Results</Hyperlink>
 				</TextBlock>
 
@@ -129,7 +139,10 @@
                     <TextBlock Grid.Column="0" Grid.Row="13" Margin="2,2,2,2" FontWeight="Bold">Probe Set Details:</TextBlock>
                     <TextBox Grid.Column="0" Grid.Row="14" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ProbeSetDetail}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
 
-                    <local:ReferenceLabFinalControl x:Name="ReferenceLabFinalControl" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="15" Margin="2,2,2,2"/>
+                    <TextBlock Grid.Column="0" Grid.Row="15" Margin="2,2,2,2" FontWeight="Bold">Probe Comment:</TextBlock>
+                    <TextBox Grid.Column="0" Grid.Row="16" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ProbeComment}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
+
+                    <local:ReferenceLabFinalControl x:Name="ReferenceLabFinalControl" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="17" Margin="2,2,2,2"/>
                     
                 </Grid>
             </ScrollViewer>
