--- a/YellowstonePathology/UI/Test/MultipleMyelomaIgHByFishResultPage.xaml
+++ b/YellowstonePathology/UI/Test/MultipleMyelomaIgHByFishResultPage.xaml
@@ -30,7 +30,9 @@
 			<Grid Grid.Column="0" Margin="10" Width="120">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto"></RowDefinition>
-					<RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
 					<RowDefinition Height="20"></RowDefinition>
@@ -41,31 +43,40 @@
 					<RowDefinition Height="Auto"></RowDefinition>
 				</Grid.RowDefinitions>
 
-				<TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Results</TextBlock>
-				<TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">
+				<TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Options</TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">
+                    <Hyperlink Click="HyperLinkCPTCodes_Click">CPT Codes</Hyperlink>
+                </TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">
+                    <Hyperlink Click="HyperLinkProbeComment_Click">Probe Comment</Hyperlink>
+                </TextBlock>
+                
+                <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkNormal_Click">Normal</Hyperlink>
 				</TextBlock>
-				<TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,5">
+				<TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,5">
                     <Hyperlink Click="HyperLinkAbnormal_Click">Abnormal</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">                    
+				<TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAcceptResults_Click">Accept Results</Hyperlink>
 				</TextBlock>
 
-                <TextBlock Name="TextBlockShowDocument" Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">                    
+                <TextBlock Name="TextBlockShowDocument" Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkShowDocument_Click">Show Document</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,5">
+				<TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,5">
 					<Hyperlink Click="HyperLinkFinalizeResults_Click">Finalize</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
+				<TextBlock Grid.Column="0" Grid.Row="10" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkUnacceptResults_Click">Unaccept Results</Hyperlink>
 				</TextBlock>
 
-                <TextBlock Name="TextBlockUnfinalResults" Grid.Column="0" Grid.Row="9" Margin="5,3,0,0">                    
+                <TextBlock Name="TextBlockUnfinalResults" Grid.Column="0" Grid.Row="11" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkUnfinalResults_Click">Unfinalize Results</Hyperlink>
 				</TextBlock>
 
@@ -112,7 +123,10 @@
 					<TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,5" FontWeight="Bold">Nuclei Scored:</TextBlock>
 					<TextBox Grid.Column="1" Grid.Row="6" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.NucleiScored}" />
 
-					<local:ReferenceLabFinalControl x:Name="ReferenceLabFinalControl" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="13" Margin="2,2,2,2"/>
+                    <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" FontWeight="Bold">Probe Comment:</TextBlock>
+                    <TextBox Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ProbeComment}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
+
+                    <local:ReferenceLabFinalControl x:Name="ReferenceLabFinalControl" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="13" Margin="2,2,2,2"/>
 
 				</Grid>
 
