--- a/YellowstonePathology/UI/Surgical/SurgicalReview.xaml
+++ b/YellowstonePathology/UI/Surgical/SurgicalReview.xaml
@@ -415,7 +415,7 @@
 				<RowDefinition Height="*"></RowDefinition>
 			</Grid.RowDefinitions>
 			<ToolBarTray Grid.Column="0" Grid.Row="0" Background="Gainsboro">
-				<ToolBar Grid.Column="0" Grid.Row="0">
+                <ToolBar Grid.Column="0" Grid.Row="0" IsEnabled="{Binding Path=FieldEnabler.IsProtectedEnabled}">
 					<Button Click="ButtonAddAmendment_Click" ToolTip="Add Admendment" IsEnabled="True">
 						<StackPanel Orientation="Horizontal">
 							<Image Source="/Resources/Amendments.ico" Margin="2" Height="16"></Image>
@@ -448,7 +448,7 @@
 					<Button ToolTip="Take over case" Click="ButtonReassignCase_Click">
 						<StackPanel Orientation="Horizontal">
 							<Image Source="/Resources/reassign.ico" Margin="2" Height="16"></Image>
-							<TextBlock VerticalAlignment="Center" Margin="2">Reassign Case</TextBlock>
+                            <TextBlock VerticalAlignment="Center" Margin="2">Reassign Case</TextBlock>
 						</StackPanel>
 					</Button>
                     <Button ToolTip="Set CPT Codes" Click="ButtonSetCPTCodes_Click">
